--- a/sorting/style.css
+++ b/sorting/style.css
@@ -16,7 +16,7 @@ body{
 }
 
 .flex-item{
-    background: cyan;
+    background: white;
     border: 1pt solid black;
     width: 10px;
     transition: 0.1s all ease;
