--- a/searching/style.css
+++ b/searching/style.css
@@ -1,6 +1,10 @@
 * {
     box-sizing: border-box;
-    background-color: #243441;
+    background-color: #212529;
+  }
+
+  ::placeholder{
+    color: white;
   }
   
   body {
@@ -40,7 +44,17 @@
     display: inline-block;
     width: auto;
     padding: 0 1rem;
-    border-radius: 20px;
+    margin: 1em;
+    border: 2px solid black;
+    border-radius: 10px;
+    color: #fff;
+    background-color: #1c1f23;
+    border-color: #0d6efd;
+  }
+
+  .btn:hover{
+    background-color: #0d6efd;
+    border-color: #0d6efd;
   }
   
   .shadow {
@@ -116,17 +130,6 @@
     justify-content: center;
   }
   
-  .linear-btn
-  /* .binary-btn { */ {
-    border-radius: 0;
-    border-bottom: 1px solid white;
-  }
-  
-  .binary-btn {
-    border-radius: 0;
-    border-bottom: 1px solid #243441;
-  }
-  
   .search-btn {
     display: flex;
     align-items: center;
@@ -192,4 +195,16 @@
   .search-wrapper {
     margin: 10px;
   }
-  
+
+  .title{
+    text-align: center;
+    margin: 20px 0 5px 0;
+    color: whitesmoke;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+  }
+
+#sorting-toggle {
+    padding: 9px 22px;
+    font-size: 1em;
+    margin: 0px;
+}
